setup: update for OpenJDK and GraalVM